# solana-university-hackathon

./: .cursorrules  .gitignore  ANCHOR_CONFIG_VERIFIED.md  ARCHITECTURE.md  Anchor.toml  BACKEND_IMPROVEMENTS.md  BRUTAL_HONEST_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DEPLOY.md  FINAL_STATUS.md  FIXES_IMPLEMENTED.md  HONEST_STATUS.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REAL_STATUS.md  SECURITY.md  START_HERE.md  package-lock.json  package.json  verify-setup.bat  verify-setup.sh
.github/workflows/: build-and-deploy.yml
app/: .env.example  next.config.js  package-lock.json  package.json
app/public/: .gitkeep
app/public/.well-known/: assetlinks.json
app/src/app/: layout.tsx  page.tsx
app/src/idl/: keystore.json
app/src/lib/: api.ts  keystore-client.ts  keystore.ts  passkey.ts  relayer.ts  solana.ts
app/src/types/: api.ts  keystore.ts
mobile/: App.tsx  DEMO_SCRIPT.md  README.md  SDK_README.md  app.json  metro.config.js  package-lock.json  package.json
mobile-app/lib/: passkey.ts
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/ios/: Podfile
mobile/ios/KeystoreMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
mobile/ios/KeystoreMobile.xcodeproj/: project.pbxproj
mobile/src/sdk/: KeystoreSDK.ts  (+4 more)
programs/keystore/: Cargo.toml
programs/keystore/src/: error.rs  lib.rs  secp256r1.rs  state.rs
programs/keystore/src/instructions/: add_key.rs  create.rs  execute.rs  mod.rs  register_credential.rs
relayer/: README.md  package.json
relayer/src/: index.ts  rateLimit.ts  relayer.ts
(+14 files in other folders)
