[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "keystore"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
# Pin transitive deps for Rust 1.75 compatibility
indexmap = "=2.2.6"
borsh = "=1.5.1"
hashbrown = "=0.14.3"

